fixed the gap in profile section in mobile

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -80,7 +80,7 @@
     gap: 1rem;
     flex-direction: column;
     align-items: center;
-    height: fit-content;
+    justify-content: center;
   }
   article {
     font-size: 1rem;
@@ -130,7 +130,6 @@
   #tagline-section {
     height: auto;
     padding: 1rem 0;
-    height: fit-content;
   }
   .tagline-container {
     padding: 1rem 1.5rem;
